Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -76,7 +76,7 @@ The response will include a `crawl` object that you'll use to track and retrieve
   "startUrls": ["https://example.com"],
   "maxResults": 50,
   "maxDepth": 5,
-  "numberOfResults": 0,
+  "totalPages": 0,
   "includeLinks": true,
   "entireWebsite": false,
   "excludeNonMainTags": true,
@@ -121,7 +121,7 @@ You can enable either option or both simultaneously.
       "teamId": "680e8bc08cdb14f10180db6a",
 	  "projectId": "6450e36787c81925622df494",
       "startUrls": ["https://example.com"],
-      "numberOfResults": 19,
+      "totalPages": 19,
       "entireWebsite": false,
       "useSitemap": false,
       "excludeNonMainTags": true,
